# uumpa-ai

./: .gitignore  LICENSE  README.md  catalog.yaml  pyproject.toml
tests/: conftest.py
tests/agents/: test_api.py
tests/logbook/: test_api.py
uumpa_ai/: cli.py  config.py
uumpa_ai/agents/: api.py  base_agent.py  cli.py
uumpa_ai/agents/opencode/: README.md  __init__.py  agent.py  cli.py  opencode.py  server.py
uumpa_ai/catalog/: api.py  base_catalog_item.py
uumpa_ai/common/: exceptions.py  kubectl.py
uumpa_ai/entrypoints/: cli_entrypoint.py
uumpa_ai/logbook/: README.md  agents.py  api.py  cli.py  common.py  forgejo.py  init.py
uumpa_ai/orchestrator/: README.md  api.py  cli.py  daemon.py  init.py  watcher.py
uumpa_ai/routers/: simple.py
